--- a/backend/app/views/users/index.erb
+++ b/backend/app/views/users/index.erb
@@ -1,5 +1,5 @@
 <h2>All Users</h2>
 <% @users.each do |user| %>
-  <p><%= user.username %>: <%= user.email%></p>
+  <p><%= user.username %></p>
   <hr>
 <% end %>
