--- a/backend/app/views/users/login.erb
+++ b/backend/app/views/users/login.erb
@@ -2,8 +2,8 @@
 <%#= form_tag('/login', method: :post) do %>
 <form id="loginForm">
   <div class="form-group">
-    <%= label_tag(:handle, "Your name:") %>
-    <%= text_field_tag "user[handle]" %>
+    <%= label_tag(:username, "Your name:") %>
+    <%= text_field_tag "user[username]" %>
   </div>
 
   <div class="form-group">
